--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: extify
 description: "내가 사용할 플러터 유틸리티 패키지"
-version: 1.0.0
+version: 1.0.1
 homepage: https://github.com/seungjoonH/extify
+repository: https://github.com/seungjoonH/extify
 
 environment:
   sdk: ^3.5.4
